# ancient-greek-playground

./: .gitignore  README.md  pyproject.toml
ancient_greek_playground/: __init__.py
ancient_greek_playground/beta_code/: __init__.py
ancient_greek_playground/normalization/: __init__.py  grave.py
ancient_greek_playground/paths/: __init__.py
ancient_greek_playground/perseus/: __init__.py  constants.py  data_repo.py  download.py  models.py  xml.py
hack/: _build_greek_lit_ant.sh  build_greek_lit_ant.sh  start_existdb_container.sh
hack/existdb_files/: Dockerfile
notebooks/: recon.ipynb
tests/: test_beta_code.py  test_normalization.py
